// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen Component renders correctly 1`] = `
<SafeAreaView
  testID="home-screen"
>
  <ScrollView
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C1C1C1",
          "height": 200,
          "justifyContent": "center",
        }
      }
    >
      <Text
        markdown={false}
        style={Object {}}
        type="text"
      >
        Header - TBD
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 6,
          "marginHorizontal": 16,
          "marginTop": 12,
        }
      }
    >
      <Text
        markdown={false}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
          }
        }
        type="h2"
      >
        Featured events
      </Text>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        onPress={[Function]}
        testID="view-all"
      >
        <Text
          markdown={false}
          style={
            Object {
              "color": "rgb(45, 47, 127)",
            }
          }
          type="text"
        >
          View all
        </Text>
      </Touchable>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginHorizontal": 12,
        }
      }
    >
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="1"
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 8,
            "paddingHorizontal": 4,
            "width": "50%",
          }
        }
        testID="event-tile-1"
      >
        <EventTile
          date="2018-07-10T00:00"
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="2"
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 8,
            "paddingHorizontal": 4,
            "width": "50%",
          }
        }
        testID="event-tile-2"
      >
        <EventTile
          date="2018-07-10T00:00"
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="3"
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 8,
            "paddingHorizontal": 4,
            "width": "50%",
          }
        }
        testID="event-tile-3"
      >
        <EventTile
          date="2018-07-10T00:00"
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="4"
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 8,
            "paddingHorizontal": 4,
            "width": "50%",
          }
        }
        testID="event-tile-4"
      >
        <EventTile
          date="2018-07-10T00:00"
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
    </View>
  </ScrollView>
</SafeAreaView>
`;

exports[`HomeScreen Component renders max 6 events 1`] = `
<SafeAreaView
  testID="home-screen"
>
  <ScrollView
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C1C1C1",
          "height": 200,
          "justifyContent": "center",
        }
      }
    >
      <Text
        markdown={false}
        style={Object {}}
        type="text"
      >
        Header - TBD
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 6,
          "marginHorizontal": 16,
          "marginTop": 12,
        }
      }
    >
      <Text
        markdown={false}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
          }
        }
        type="h2"
      >
        Featured events
      </Text>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        onPress={[Function]}
        testID="view-all"
      >
        <Text
          markdown={false}
          style={
            Object {
              "color": "rgb(45, 47, 127)",
            }
          }
          type="text"
        >
          View all
        </Text>
      </Touchable>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginHorizontal": 12,
        }
      }
    >
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="1"
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 8,
            "paddingHorizontal": 4,
            "width": "50%",
          }
        }
        testID="event-tile-1"
      >
        <EventTile
          date="2018-07-10T00:00"
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="2"
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 8,
            "paddingHorizontal": 4,
            "width": "50%",
          }
        }
        testID="event-tile-2"
      >
        <EventTile
          date="2018-07-10T00:00"
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="3"
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 8,
            "paddingHorizontal": 4,
            "width": "50%",
          }
        }
        testID="event-tile-3"
      >
        <EventTile
          date="2018-07-10T00:00"
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="4"
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 8,
            "paddingHorizontal": 4,
            "width": "50%",
          }
        }
        testID="event-tile-4"
      >
        <EventTile
          date="2018-07-10T00:00"
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="5"
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 8,
            "paddingHorizontal": 4,
            "width": "50%",
          }
        }
        testID="event-tile-5"
      >
        <EventTile
          date="2018-07-10T00:00"
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="6"
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 8,
            "paddingHorizontal": 4,
            "width": "50%",
          }
        }
        testID="event-tile-6"
      >
        <EventTile
          date="2018-07-10T00:00"
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
    </View>
  </ScrollView>
</SafeAreaView>
`;
